// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar  UI tests should render corectly with props 1`] = `
<div>
  <div
    class="sidebar__wrapper"
  >
    <div
      class="sidebar"
    >
      <div
        class="sidebar__header"
      >
        <span>
          example
        </span>
        <span>
          <span
            aria-label="right"
            class="anticon anticon-right"
            role="img"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              data-icon="right"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div>
        example
      </div>
    </div>
  </div>
</div>
`;

exports[`Sidebar  UI tests should render corectly without props 1`] = `
<div>
  <div
    class="sidebar__wrapper"
  >
    <div
      class="sidebar"
    >
      <div
        class="sidebar__header"
      >
        <span />
        <span>
          <span
            aria-label="right"
            class="anticon anticon-right"
            role="img"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              data-icon="right"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
